@@ -213,46 +213,48 @@ class PostProcess
 		if ($par2info->error)
 			return false;
 
-		$files = $par2info->getFileList();
-		if (count($files) > 0)
+		if ($files = @$par2info->getFileList())
 		{
-			$namefixer = new Namefixer($this->echooutput);
-			$rf = new ReleaseFiles();
-			$relfiles = 0;
-			$foundname = false;
-			foreach ($files as $fileID => $file)
+			if (count($files) > 0)
 			{
-				// Add to releasefiles.
-				if ($relfiles < 11 && $db->queryOneRow(sprintf("SELECT ID FROM releasefiles WHERE releaseID = %d AND name = %s", $relID, $this->db->escapeString($file["name"]))) === false)
+				$namefixer = new Namefixer($this->echooutput);
+				$rf = new ReleaseFiles();
+				$relfiles = 0;
+				$foundname = false;
+				foreach ($files as $fileID => $file)
 				{
-					if ($rf->add($relID, $file["name"], $file["size"], $quer["postdate"], 0))
-						$relfiles++;
+					// Add to releasefiles.
+					if ($relfiles < 11 && $db->queryOneRow(sprintf("SELECT ID FROM releasefiles WHERE releaseID = %d AND name = %s", $relID, $this->db->escapeString($file["name"]))) === false)
+					{
+						if ($rf->add($relID, $file["name"], $file["size"], $quer["postdate"], 0))
+							$relfiles++;
+					}
+					$quer["textstring"] = $file["name"];
+					$namefixer->checkName($quer, 1, "PAR2, ", 1);
+					$stat = $db->queryOneRow("SELECT relnamestatus AS a FROM releases WHERE ID = {$relID}");
+					if ($stat["a"] != 1)
+					{
+						$foundname = true;
+						break;
+					}
 				}
-				$quer["textstring"] = $file["name"];
-				$namefixer->checkName($quer, 1, "PAR2, ", 1);
-				$stat = $db->queryOneRow("SELECT relnamestatus AS a FROM releases WHERE ID = {$relID}");
-				if ($stat["a"] != 1)
+				if ($relfiles > 0)
 				{
-					$foundname = true;
-					break;
+					$this->debug("Added {$relfiles} releasefiles from PAR2 for {$quer['searchname']}.");
+					$cnt = $db->queryOneRow("SELECT COUNT(releaseID) AS count FROM releasefiles WHERE releaseID = {$relID}");
+					$count = $relfiles;
+					if ($cnt !== false && $cnt["count"] > 0)
+						$count = $relfiles + $cnt["count"];
+					$db->query(sprintf("UPDATE releases SET rarinnerfilecount = %d where ID = %d", $count, $relID));
 				}
+				if ($foundname === true)
+					return true;
+				else
+					return false;
 			}
-			if ($relfiles > 0)
-			{
-				$this->debug("Added {$relfiles} releasefiles from PAR2 for {$quer['searchname']}.");
-				$cnt = $db->queryOneRow("SELECT COUNT(releaseID) AS count FROM releasefiles WHERE releaseID = {$relID}");
-				$count = $relfiles;
-				if ($cnt !== false && $cnt["count"] > 0)
-					$count = $relfiles + $cnt["count"];
-				$db->query(sprintf("UPDATE releases SET rarinnerfilecount = %d where ID = %d", $count, $relID));
-			}
-			if ($foundname === true)
-				return true;
 			else
 				return false;
 		}
-		else
-			return false;
 	}
 
 	//
